<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3fc1c6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtWhatislifebeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="What is lifebeam?"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtlifebeam_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="162dp"
        android:text="lifebeam is"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtlifebeam_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtlifebeam_is"
        android:layout_below="@+id/txtlifebeam_is"
        android:layout_marginTop="15dp"
        android:text="@string/lifebeam_desc"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/txthow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/how"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:visibility="gone" />
    
     <ImageView
         android:id="@+id/imglistfamilytree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="24dp"
         android:src="@drawable/reg4"
         android:visibility="gone" />
    
    <TextView
        android:id="@+id/txtregister1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txttoafamilyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtregister1"
        android:layout_centerHorizontal="true"
        android:text="@string/to_a_family_account"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgsmith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txttoafamilyaccount"
        android:layout_marginTop="32dp"
        android:src="@drawable/reg5"
        android:visibility="gone" />
    
     <TextView
        android:id="@+id/txtconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/connect"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:visibility="gone" />
     <TextView
        android:id="@+id/txttoaloveone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtconnect"
        android:layout_centerHorizontal="true"
        android:text="@string/to_a_loved_one"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:visibility="gone" />

     <ImageView
         android:id="@+id/imgfamilytree1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:src="@drawable/reg6"
         android:visibility="gone" />

     <TextView
         android:id="@+id/txtcontinewith"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/continue_with"
         android:textSize="25dp"
         android:textColor="#ffffff"
         android:visibility="gone" />

     <TextView
         android:id="@+id/txtregistration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtcontinewith"
         android:layout_centerHorizontal="true"
         android:text="@string/registration"
         android:textSize="25dp"
         android:textColor="#ffffff"
         android:visibility="gone" />

     <Button
         android:id="@+id/btnRepeatIntro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:text="Repeat Intro"
         android:textSize="18dp"
         android:textColor="#ffffff"
         android:background="#3fc1c6"
         android:visibility="gone" />


</RelativeLayout>
